--- a/prepros-6.config
+++ b/prepros-6.config
@@ -38,8 +38,7 @@
   ],
   "fileTree": {
     "expandedDirs": [
-      "jade",
-      "images"
+      "jade"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -74,7 +73,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
