Изменения для публикации

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -54,12 +54,6 @@
   },
   "imports": [
     {
-      "path": "css/style.scss",
-      "imports": [
-        "css/_reset.scss"
-      ]
-    },
-    {
       "path": "jade/index.jade",
       "imports": [
         "jade/includes/components.jade"
@@ -73,7 +67,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
