--- a/prepros-6.config
+++ b/prepros-6.config
@@ -54,6 +54,12 @@
   },
   "imports": [
     {
+      "path": "css/style.scss",
+      "imports": [
+        "css/_reset.scss"
+      ]
+    },
+    {
       "path": "jade/index.jade",
       "imports": [
         "jade/includes/components.jade"
@@ -67,7 +73,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
