--- a/prepros-6.config
+++ b/prepros-6.config
@@ -38,7 +38,8 @@
   ],
   "fileTree": {
     "expandedDirs": [
-      "jade"
+      "jade",
+      "css"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -54,12 +55,6 @@
   },
   "imports": [
     {
-      "path": "css/style.scss",
-      "imports": [
-        "css/_reset.scss"
-      ]
-    },
-    {
       "path": "jade/index.jade",
       "imports": [
         "jade/includes/components.jade"
@@ -69,6 +64,12 @@
       "path": "jade/test.jade",
       "imports": [
         "jade/includes/components.jade"
+      ]
+    },
+    {
+      "path": "css/style.scss",
+      "imports": [
+        "css/_reset.scss"
       ]
     }
   ],
